# tav-resonace-research-tool

./: README.md
tav-resonance/: CHANGELOG.md  CITATION.cff  LICENSE  Makefile  README.md  pyproject.toml
tav-resonance/examples/: analytic_ladder.ipynb  frb_path_analysis.ipynb
tav-resonance/src/tav_resonance/: __init__.py  analytic.py  anchors.py  cli.py  config.py  core.py  dispersion.py
tav-resonance/src/tav_resonance/frb/: __init__.py  catalog.py  dispersion.py  paths.py  pipeline.py
tav-resonance/src/tav_resonance/geometry/: __init__.py  ladder.py  sphere.py
tav-resonance/src/tav_resonance/harmonics/: __init__.py  base.py  frb.py
tav-resonance/src/tav_resonance/null/: __init__.py  tests.py
tav-resonance/src/tav_resonance/prereg/: __init__.py  schema.py
tav-resonance/src/tav_resonance/ratios/: __init__.py  sparc.py
tav-resonance/src/tav_resonance/viz/: __init__.py  frb.py
tav-resonance/tests/: conftest.py  test_analytic_ladder.py  test_anchors.py  test_config.py  test_harmonics.py  test_integration.py
